# krankenfahrt

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  PROCESS.md  README.md  RESEARCH_SGB302_Muster4_DTA2026.md  ROOT_CAUSE_ANALYSIS.md  bot_feature_analysis.md  pyproject.toml  railway.json
.cursor/rules/: 00-agent-guardrails.mdc  01-project-principles.mdc
.github/workflows/: ci.yml  deploy.yml
benchmarks/: BENCHMARK_REPORT.md  benchmark_whisper.py  whisper_bench_results.json
docs/: ALERTING.md  AVV_Auftragsverarbeitungsvertrag_Muster.md  DATENKLASSIFIKATION.md  DSGVO_AUDIT.md  LOESCHKONZEPT.md  LOGGING_MONITORING.md  MODEL_VALIDATION_REPORT.md  MULTI_TENANCY_ARCHITECTURE.md  REQUIREMENTS_EDGE_CASES.md  knowwhere-multitenancy-analysis.md
docs/pilot/: CHEF_QUICKSTART.md  FAHRER_ONBOARDING.md  FEEDBACK_FORM.md  MONITORING_PLAN.md  PILOT_REPORT_TEMPLATE.md  TESTPLAN.html
output/: hermes-agent-pricing-strategy.md
scripts/: ci.sh  health_smoke_test.py  pre-commit.sh  sim_test.py  test_osrm.py  test_osrm_integration.py
src/krankenfahrt/: __init__.py  alerting.py  config.py  health.py  logging_setup.py  main.py  metrics_server.py
tests/: conftest.py  generate_sample_invoice.py  test_alerting.py  test_chef_bot.py  test_chef_dashboard.py  test_config.py  test_dispatch.py  test_driver_bot.py  test_e2e_flow.py  test_escalation.py  test_llm_fallback.py  test_osrm_client.py  test_patient_bot.py  test_rate_limiter.py  test_resilience_integration.py  test_routing.py  test_state_machine.py  verify_structlog.py
tests/contracts/: test_imports.py
tests/integration/: test_auto_dispatch.py  test_billing.py  test_chef_bot.py  test_patient_bot.py
tests/unit/: test_alerting.py  test_config.py  test_db_retry.py  test_dispatch.py  test_health.py  test_live_location.py  (+4 more)
(+30 files in other folders)
